<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_size"
            android:src="@mipmap/gas_station" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="@dimen/app_name_size" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_vertical_components_margin"
            android:layout_marginTop="@dimen/small_vertical_components_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:text="StatoilStationKrakowska"
                android:textColor="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_vertical_components_margin"
            android:layout_marginTop="@dimen/small_vertical_components_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="text"
                android:text="#24fRG^%weLp0"
                android:textColor="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/remember_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_credentials" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_vertical_components_margin"
            android:layout_marginTop="@dimen/small_vertical_components_margin"
            android:padding="@dimen/action_button_padding"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/action_button_text_size" />

        <TextView
            android:id="@+id/link_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_vertical_components_margin"
            android:gravity="center"
            android:onClick="switchView"
            android:text="@string/no_account"
            android:textSize="@dimen/link_text_size" />
    </LinearLayout>

</ScrollView>